--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 	},
 	"dependencies": {
 		"core-js": "^3.8.3",
+		"simplebar-vue": "^2.3.3",
+		"swiper": "^10.0.4",
 		"vue": "^3.2.13",
 		"vuex": "^4.0.0"
 	},
@@ -25,6 +27,7 @@
 		"eslint-plugin-vue": "^8.0.3",
 		"prettier": "^2.4.1",
 		"sass": "^1.32.7",
-		"sass-loader": "^12.0.0"
+		"sass-loader": "^12.0.0",
+		"volar-service-vetur": "latest"
 	}
 }
